Closed Bug 96861 Opened 24 years ago Closed 24 years ago

Page containing Javascript-menu never finishes loading.

Categories

(Core :: DOM: HTML Parser, defect, P1)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: h-p-e, Assigned: harishd)

References

()

Details

(Keywords: compat, Whiteboard: [fix in hand])

Attachments

(5 files)

On the left side of this page there should be a menu with several options (additional to the selection box). I added the code of that frame below (it is copied from the browser source window). As I see it, the second table below the call to <script type="text/javascript" language="JavaScript" src="/oneclick_js.js"></script> is missing. With NS 4.77 and OPERA 5.0 there is no problem. [........... cut here ........................ cut here ..................] [.... Frame source follows here ..........................................] <!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "DTD/xhtml1-transitional.dtd"> --> <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"> <!-- ======================================================================================== Copyright (c) 2000 100world. All rights reserved. Client: Consors Last Modified: August 7, 2000 ======================================================================================== --> <!-- ================== start head element ======================== --> <head> <title>Menu</title> <script type="text/javascript" language="JavaScript1.1" src="/global_js.js"></script> <link rel="stylesheet" type="text/css" href="/global_css.css" /> <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /> </head> <!-- ================== end head element ======================== --> <!-- ================== start body element ======================== --> <body background="/images/menu_bg.gif" bgcolor="#ffffff" topmargin="0" leftmargin="0" marginwidth="0" marginheight="0" text="#000000" link="#b30000" vlink="#b30000" alink="#000000" > <form action=""> <table width="100%" cellspacing="0" cellpadding="0" border="0" height="100%"> <tr bgcolor="#ffffff" valign="top" height="100%"> <!-- 2nd + 3rd Naviagtionlevel //--> <td width="170" background="/images/menu_bg_l.gif" height="100%"><img src="/images/clear.gif" width="12" height="1" border="0" /><br /> <table width="155" cellspacing="0" cellpadding="0" border="0"> <tr valign="top"><td width="16"><img src="/images/clear.gif" width="16" height="1" border="0" /><br /></td> <td><img src="/images/dots.gif" width="115" height="1" border="0" vspace="6" /></td></tr> <tr valign="top"> <td></td><td width="139"><script type="text/javascript" language="JavaScript" src="/oneclick_js.js"></script></td></tr> </table> <table width="155" cellspacing="0" cellpadding="0" border="0"> <tr><td width="15"><img src="/images/clear.gif" width="16" height="10" border="0" /><br /></td><td width="139"></td></tr> <tr><td></td><td><a href="/infoworld/index.html" class="shg" target="_top">Aktien</a></td></tr> <tr><td></td><td><a href="/infoworld/fonds/index.html" class="shg" target="_top">Fonds</a></td></tr> <tr><td></td><td><a href="/infoworld/zertifikate/index.html" class="shg" target="_top">Zertifikate</a></td></tr> <tr><td></td><td><a href="/infoworld/optionsscheine/index.html" class="shg" target="_top">Optionsscheine</a></td></tr> <tr><td></td><td><a href="/infoworld/watchlist/index.html" class="shg" target="_top">Watchlist / </a><a href="/infoworld/marketpulse/index.html" class="shg" target="_top">Alarm</a></td></tr> <tr><td></td><td><a href="http://web.consors.de/consorsid/general/user_add.jsp" class="nav2" target="content">&nbsp;&#149;&nbsp;ID anfordern</a></td></tr> <tr><td></td><td><a href="http://web.consors.de/consorsid/secure/user_upd.jsp" class="nav2" target="content">&nbsp;&#149;&nbsp;ID administrieren</a></td></tr> <tr><td></td><td><a href="/infoworld/newsresearch/index.html" class="shg" target="_top">News & Research</a></td></tr> <tr><td></td><td><a href="/infoworld/neuemissionen/index.html" class="shg" target="_top">Neuemissionen</a></td></tr> </table> <table cellspacing="0" cellpadding="0" border="0"> <tr></form><form action="/cgi-bin/general/ekabfrage.pl" target="_top" method="post"><td></td><td colspan="3"><img src="/images/dots.gif" width="115" height="1" border="0" vspace="6" /><br /></td></tr> <tr><td width="16"><img src="/images/clear.gif" width="16" height="10" border="0" /><br /></td><td colspan="3"><font class="st">Kursabfrage (15min)</font></td></tr> <tr><td></td> <td width="65"><input type="text" size="9" name="kurse" style="font-size: 10px; width: 65px;" /></td> <td><font class="st">&nbsp;Suche</font></td> <td width="19"><input type="image" src="/images/gotrans.gif" width="12" height="12" hspace="5" onClick="this.form.submit()" border="0" /></td> </tr> <tr><td></td><td colspan="2" align="right"><font class="st">Realtime Login</font></td> <td><a href="javascript:rtkwindow();"><img src="/images/gotrans.gif" width="12" height="12" border="0" hspace="5" /></a></td> </tr> </table> <img src="/images/dots.gif" width="115" height="1" border="0" vspace="6" hspace="16" /><br /> </form></td> <!-- EO 2nd + 3rd Naviagtionlevel --> </tr> </table> </form> </body> <!-- ================== end body element ======================== --> </html>
Actually, that part of the page isn't missing - it isn't getting loaded. For some strange reason, the network connection stalls on it, and the throbber keeps on going. I've altered the URL to point to the frame itself. I think this is a dupe bug for now I'm going to -> networking.
Assignee: pollmann → neeti
Component: HTMLFrames → Networking: HTTP
QA Contact: amar → tever
Summary: Frame not completely displayed → Page containing Javascript-menu never finishes loading.
Actually, this might be a DOM/Javascript issue. Fabian, can you help out here?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Remove the first <form action=""> (right below the <body>) and its closing tag (righ above the </body>) and you'll be fine. Additionally the errors reported by validator.w3.org should be fixed. (/me wishes people using xhtml would use properly nested tags) Sending to parser to determine whether this needs to go to evangelism or we want to do a quirks.
Assignee: neeti → harishd
Component: Networking: HTTP → Parser
QA Contact: tever → bsharma
Whiteboard: Evangelism?
Fabian, I might be wrong, but should the browser keep loading the page forever in this case? I was under the impression that even is it _was_ a parser problem, that a warning or error should be generated, and page loading stop. Is there no provision for something like this in Moz? Thanks for the input!
I guess something wacky is going on with the script loader. -->0.9.5
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla0.9.5
QA Contact: bsharma → moied
This is a FORM nesting problem. FORMS should never be nested refer to bug 72639.
But we should cause the loading to stop somehow. Will work on it.
Whiteboard: Evangelism? → [fix in hand]
--> 0.9.6
Target Milestone: mozilla0.9.5 → mozilla0.9.6
*** Bug 106439 has been marked as a duplicate of this bug. ***
Out of time :-( Moving to 0.9.7
Target Milestone: mozilla0.9.6 → mozilla0.9.7
Keywords: compat, patch
Blocks: 113492
Comment on attachment 60750 [details] [diff] [review] patch v1.2 [ please ignore my previous patch ] sr=jst
Attachment #60750 - Flags: superreview+
Comment on attachment 60750 [details] [diff] [review] patch v1.2 [ please ignore my previous patch ] r=heikki Also, please open a bug for the better way of handling this we discussed during review (form context).
Attachment #60750 - Flags: review+
FIXED.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Verified with build ID 20020117 on win2k and patch checked in (Rev 3.105)
Status: RESOLVED → VERIFIED
Backing out the change [ for backwards compatibility ] to fix bug 128521. Will post a new patch soon. Reopening the bug.
Status: VERIFIED → REOPENED
Keywords: nsbeta1
Priority: P2 → P1
Resolution: FIXED → ---
Target Milestone: mozilla0.9.7 → mozilla1.0
Prevent reevaluation of the SCRIPT when demoting FORM.
Testcase: <BODY> <FORM> <TABLE border=1> <TR> <TD> <SCRIPT language=JavaScript src="96861_1_files/oneclick_js.js"></SCRIPT> If you can see this line then the bug is fixed. </TD> </TR> </TABLE> </BODY> </HTML> oneclick_js.js --------------- document.write('Loading FORM <form></form>');
Comment on attachment 75414 [details] [diff] [review] patch v1.3 [ proposed by vidur ] r=harishd
Attachment #75414 - Flags: review+
Status: REOPENED → ASSIGNED
Comment on attachment 75414 [details] [diff] [review] patch v1.3 [ proposed by vidur ] Please add comments why those lines are there. Also explain in this bug the idea behind this fix.
Comment on attachment 75414 [details] [diff] [review] patch v1.3 [ proposed by vidur ] Add comments, but please let's not leave this hack as the final fix for this bug. Let's check this in to fix the immediate problem, but leave the bug open and target post mozilla1.0. sr=jst
Attachment #75414 - Flags: superreview+
Comment on attachment 76238 [details] [diff] [review] patch v1.4 [ added comments as suggested by reviewers ] a=dbaron for trunk checkin. (Also transferring r= and sr= from previous attachment.)
Attachment #76238 - Flags: superreview+
Attachment #76238 - Flags: review+
Attachment #76238 - Flags: approval+
FIXED.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
verified fix checked in cvs (rev 3.534)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: