Make sure to not reevaluate a SCRIPT when demoting FORM. Patch proposed by |vidur|. b=96861, r=harishd, sr=jst, a=dbaron